# MCP-WooCommerce

./: README.md  pyproject.toml  smithery.yaml
mcp_woocommerce/: __init__.py  __main__.py  client.py  server.py
tests/: test_server.py
