[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-woocommerce"
version = "0.1.0"
description = "Production-grade MCP server for the WooCommerce REST API — 34 tools for products, orders, customers, coupons, reports, shipping, webhooks, and system management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alex LaGuardia", email = "alex@alexlaguardia.dev" }
]
keywords = ["mcp", "woocommerce", "ecommerce", "wordpress", "ai", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/AlexlaGuardia/mcp-woocommerce"
Repository = "https://github.com/AlexlaGuardia/mcp-woocommerce"
Issues = "https://github.com/AlexlaGuardia/mcp-woocommerce/issues"

[project.scripts]
mcp-woocommerce = "mcp_woocommerce.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_woocommerce"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
